Multisegment PDUs are not reassembled properly with TCP dissector
This issue was migrated from bug 7544 in our old bug tracker.
Original bug information:
Reporter: Ilarion Ishkulov
Status: RESOLVED FIXED
Product: Wireshark
Component: Dissection engine (libwireshark)
OS: All
Platform: All
Version: 1.9.x (Experimental)
Attachments:
slicer.lua: Simple dissector
tmp.pcap: .pcap file for simple dissector
fix_pdus.diff: fixes multipdu dissection
See also: Issue #6879 (closed)